{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 911,
  "lineage": "55bf9a67-d5c4-921e-d761-b8a7a550a629",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:security-group/sg-0acd6eab376a40bcb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acd6eab376a40bcb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg20230422003559419000000001",
            "name_prefix": "sg",
            "owner_id": "261106957109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0067e579c9ec346c8"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:security-group/sg-02e6be5a34ccda5f7",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05419262c58b82268"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f670a1c8e36994c1"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05419262c58b82268"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f670a1c8e36994c1"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-02e6be5a34ccda5f7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05419262c58b82268"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f670a1c8e36994c1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-lab-cluster-20230422000758683400000001",
            "name_prefix": "eks-lab-cluster-",
            "owner_id": "261106957109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-cluster"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:security-group/sg-0f670a1c8e36994c1",
            "description": "My EKS Node Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e6be5a34ccda5f7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-0f670a1c8e36994c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e6be5a34ccda5f7"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02e6be5a34ccda5f7"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "name": "my-eks-node-security-group",
            "name_prefix": "",
            "owner_id": "261106957109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-lab",
              "Environment": "dev",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my-eks-node-security-group",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-lab": "owned"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "Environment": "dev",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "my-eks-node-security-group",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-lab": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3848468000",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6be5a34ccda5f7",
            "security_group_rule_id": "sgr-0680b9c07d13dad6e",
            "self": false,
            "source_security_group_id": "sg-0f670a1c8e36994c1",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3091231445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6be5a34ccda5f7",
            "security_group_rule_id": "sgr-014f42ce6b885371f",
            "self": false,
            "source_security_group_id": "sg-0f670a1c8e36994c1",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-646012736",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02e6be5a34ccda5f7",
            "security_group_rule_id": "sgr-0680b9c07d13dad6e",
            "self": false,
            "source_security_group_id": "sg-0f670a1c8e36994c1",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_blueprints.module.aws_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4196098811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-082322522da783e47",
            "self": false,
            "source_security_group_id": "sg-02e6be5a34ccda5f7",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_example",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 30093,
            "id": "sgrule-99950319",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0b9d7cc551ac45ae2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 30093,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node"
          ]
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-4167871425",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0d30a55f25a4563d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-666015455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-079de51d2ed632f53",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-1496101842",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0fb34d3ed1417d022",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3490767780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0d3effd58f8023381",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1584882114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-08ba4ed9742b09734",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-4188441368",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-096fd25b4deaa5ae8",
            "self": false,
            "source_security_group_id": "sg-02e6be5a34ccda5f7",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2312952067",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0a2acc129c628638d",
            "self": false,
            "source_security_group_id": "sg-02e6be5a34ccda5f7",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_example",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-3038877186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0ad0e5516b3329b3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3428936300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-0b271297498934971",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1748945283",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f670a1c8e36994c1",
            "security_group_rule_id": "sgr-08ba4ed9742b09734",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kubernetes_addons.module.kube_prometheus_stack[0]",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "prometheus",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-prometheus-stack",
            "metadata": [
              {
                "generation": 0,
                "name": "kube-prometheus-stack",
                "resource_version": "2213",
                "uid": "0380cdec-cf89-4a2c-b586-74ae83b8138d"
              }
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.this",
            "module.eks_blueprints.data.aws_caller_identity.current",
            "module.eks_blueprints.data.aws_eks_cluster.cluster",
            "module.eks_blueprints.data.aws_iam_policy_document.eks_key",
            "module.eks_blueprints.data.aws_iam_session_context.current",
            "module.eks_blueprints.data.aws_partition.current",
            "module.eks_blueprints.data.aws_region.current",
            "module.eks_blueprints.data.http.eks_cluster_readiness",
            "module.eks_blueprints.kubernetes_config_map.amazon_vpc_cni",
            "module.eks_blueprints.kubernetes_config_map.aws_auth",
            "module.eks_blueprints.module.aws_eks.aws_cloudwatch_log_group.this",
            "module.eks_blueprints.module.aws_eks.aws_ec2_tag.cluster_primary_security_group",
            "module.eks_blueprints.module.aws_eks.aws_eks_addon.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_cluster.this",
            "module.eks_blueprints.module.aws_eks.aws_eks_identity_provider_config.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks_blueprints.module.aws_eks.aws_iam_policy.cluster_encryption",
            "module.eks_blueprints.module.aws_eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks_blueprints.module.aws_eks.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.cluster_encryption",
            "module.eks_blueprints.module.aws_eks.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.aws_security_group.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group.node",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.cluster",
            "module.eks_blueprints.module.aws_eks.aws_security_group_rule.node",
            "module.eks_blueprints.module.aws_eks.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks_blueprints.module.aws_eks.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.data.tls_certificate.this",
            "module.eks_blueprints.module.aws_eks.kubernetes_config_map.aws_auth",
            "module.eks_blueprints.module.aws_eks.kubernetes_config_map_v1_data.aws_auth",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_eks_node_group.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_launch_template.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_security_group.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.aws_security_group_rule.this",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.eks_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.aws_eks_fargate_profile.this",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.module.fargate_profile.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_alias.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_external_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_grant.this",
            "module.eks_blueprints.module.aws_eks.module.kms.aws_kms_key.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks_blueprints.module.aws_eks.module.kms.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_autoscaling_group.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_autoscaling_schedule.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_iam_instance_profile.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_iam_role.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_iam_role_policy_attachment.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_launch_template.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_security_group.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.aws_security_group_rule.this",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.data.aws_ami.eks_default",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.data.aws_default_tags.current",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.data.aws_iam_policy_document.assume_role_policy",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks.module.self_managed_node_group.module.user_data.data.cloudinit_config.linux_eks_managed_node_group",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_eks_fargate_profile.eks_fargate",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_policy.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role.fargate",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.aws_iam_role_policy_attachment.fargate_pod_execution_role_policy",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.cwlogs",
            "module.eks_blueprints.module.aws_eks_fargate_profiles.data.aws_iam_policy_document.fargate_assume_role_policy",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.aws_eks_node_group.managed_ng",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.aws_iam_instance_profile.managed_ng",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.aws_iam_role.managed_ng",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.aws_iam_role_policy_attachment.managed_ng",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.aws_launch_template.managed_node_groups",
            "module.eks_blueprints.module.aws_eks_managed_node_groups.data.aws_iam_policy_document.managed_ng_assume_role_policy",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_autoscaling_group.self_managed_ng",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_iam_instance_profile.self_managed_ng",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_iam_policy.eks_windows_cni",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_iam_role.self_managed_ng",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.eks_windows_cni",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.aws_iam_role_policy_attachment.self_managed_ng",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.data.aws_ami.predefined",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.eks_windows_cni",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.data.aws_iam_policy_document.self_managed_ng_assume_role_policy",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.aws_launch_template.this",
            "module.eks_blueprints.module.aws_eks_self_managed_node_groups.module.launch_template_self_managed_ng.data.aws_eks_cluster.eks",
            "module.eks_blueprints.module.aws_eks_teams.aws_iam_policy.platform_team_eks_access",
            "module.eks_blueprints.module.aws_eks_teams.aws_iam_role.platform_team",
            "module.eks_blueprints.module.aws_eks_teams.aws_iam_role.team_access",
            "module.eks_blueprints.module.aws_eks_teams.aws_iam_role.team_sa_irsa",
            "module.eks_blueprints.module.aws_eks_teams.data.aws_caller_identity.current",
            "module.eks_blueprints.module.aws_eks_teams.data.aws_eks_cluster.eks_cluster",
            "module.eks_blueprints.module.aws_eks_teams.data.aws_iam_policy_document.platform_team_eks_access",
            "module.eks_blueprints.module.aws_eks_teams.data.aws_partition.current",
            "module.eks_blueprints.module.aws_eks_teams.data.aws_region.current",
            "module.eks_blueprints.module.aws_eks_teams.kubectl_manifest.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_cluster_role.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_cluster_role_binding.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_namespace.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_resource_quota.this",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_role.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_role_binding.team",
            "module.eks_blueprints.module.aws_eks_teams.kubernetes_service_account.team",
            "module.eks_blueprints.module.emr_on_eks.aws_iam_role.emr_on_eks_execution",
            "module.eks_blueprints.module.emr_on_eks.aws_iam_role_policy_attachment.custom",
            "module.eks_blueprints.module.emr_on_eks.data.aws_iam_policy_document.emr_assume_role",
            "module.eks_blueprints.module.emr_on_eks.data.aws_region.current",
            "module.eks_blueprints.module.emr_on_eks.kubernetes_namespace.spark",
            "module.eks_blueprints.module.emr_on_eks.kubernetes_role.emr_containers",
            "module.eks_blueprints.module.emr_on_eks.kubernetes_role_binding.emr_containers",
            "module.eks_blueprints.module.emr_on_eks.null_resource.update_trust_policy",
            "module.eks_blueprints.module.kms.aws_kms_alias.this",
            "module.eks_blueprints.module.kms.aws_kms_key.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:network-acl/acl-01c3d18ad23948cb3",
            "default_network_acl_id": "acl-01c3d18ad23948cb3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01c3d18ad23948cb3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "261106957109",
            "subnet_ids": [
              "subnet-05fef12bb2f126fdf",
              "subnet-07366daa05b22ae37",
              "subnet-09d514a08bac0e589",
              "subnet-0bd033c7612c25e4a",
              "subnet-0c4a8262511329c3f",
              "subnet-0d03d2d63e662d1b1"
            ],
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:route-table/rtb-02a490bd75e3d8b6a",
            "default_route_table_id": "rtb-02a490bd75e3d8b6a",
            "id": "rtb-02a490bd75e3d8b6a",
            "owner_id": "261106957109",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:security-group/sg-0661a6303e0e91257",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0661a6303e0e91257",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "261106957109",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-default"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060cc671fe2203562",
            "association_id": "eipassoc-07ecc522d852f74b4",
            "domain": "vpc",
            "id": "eipalloc-060cc671fe2203562",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07e27af38677126a2",
            "private_dns": "ip-10-0-0-254.ec2.internal",
            "private_ip": "10.0.0.254",
            "public_dns": "ec2-54-235-149-54.compute-1.amazonaws.com",
            "public_ip": "54.235.149.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-us-east-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:internet-gateway/igw-099098ea7db0bc5ef",
            "id": "igw-099098ea7db0bc5ef",
            "owner_id": "261106957109",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060cc671fe2203562",
            "connectivity_type": "public",
            "id": "nat-003939fe45a190922",
            "network_interface_id": "eni-07e27af38677126a2",
            "private_ip": "10.0.0.254",
            "public_ip": "54.235.149.54",
            "subnet_id": "subnet-09d514a08bac0e589",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-us-east-1a"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-us-east-1a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0191c1228524891001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003939fe45a190922",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0191c122852489100",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-099098ea7db0bc5ef",
            "id": "r-rtb-0635faa6fa1be33061080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0635faa6fa1be3306",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:route-table/rtb-0191c122852489100",
            "id": "rtb-0191c122852489100",
            "owner_id": "261106957109",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003939fe45a190922",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:route-table/rtb-0635faa6fa1be3306",
            "id": "rtb-0635faa6fa1be3306",
            "owner_id": "261106957109",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-099098ea7db0bc5ef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d1e84cc4844a7a0",
            "route_table_id": "rtb-0191c122852489100",
            "subnet_id": "subnet-07366daa05b22ae37"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035687ec79e663950",
            "route_table_id": "rtb-0191c122852489100",
            "subnet_id": "subnet-0bd033c7612c25e4a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5b1c96737a73fa4",
            "route_table_id": "rtb-0191c122852489100",
            "subnet_id": "subnet-05fef12bb2f126fdf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd4745fa4cad650",
            "route_table_id": "rtb-0635faa6fa1be3306",
            "subnet_id": "subnet-09d514a08bac0e589"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0e1c64aefb50117",
            "route_table_id": "rtb-0635faa6fa1be3306",
            "subnet_id": "subnet-0c4a8262511329c3f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e159b3058b7475a",
            "route_table_id": "rtb-0635faa6fa1be3306",
            "subnet_id": "subnet-0d03d2d63e662d1b1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-07366daa05b22ae37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07366daa05b22ae37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1a",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1a",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-0bd033c7612c25e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd033c7612c25e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1b",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1b",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-05fef12bb2f126fdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fef12bb2f126fdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1c",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-private-us-east-1c",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-09d514a08bac0e589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d514a08bac0e589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1a",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1a",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-0c4a8262511329c3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4a8262511329c3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1b",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1b",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:subnet/subnet-0d03d2d63e662d1b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d03d2d63e662d1b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "261106957109",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1c",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab-public-us-east-1c",
              "kubernetes.io/cluster/eks-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06ce67bba86f683c1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:261106957109:vpc/vpc-06ce67bba86f683c1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c3d18ad23948cb3",
            "default_route_table_id": "rtb-02a490bd75e3d8b6a",
            "default_security_group_id": "sg-0661a6303e0e91257",
            "dhcp_options_id": "dopt-0810ab6c02410c779",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06ce67bba86f683c1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02a490bd75e3d8b6a",
            "owner_id": "261106957109",
            "tags": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab"
            },
            "tags_all": {
              "Blueprint": "eks-lab",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-lab"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}